// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceConnectConnectedDeviceTest render connection failure: connection failure 1`] = `
<div
  className="device-connect-connected-device"
>
  <h3>
    Connected device
  </h3>
  <React.Fragment>
    <StyledIconBase
      ariaLabel="Connection failed"
      className="connection-error-icon"
      iconName="statusErrorFull"
    />
    <span
      className="scanned-text"
    >
      No active applications were found at the provided local host.
    </span>
  </React.Fragment>
</div>
`;

exports[`DeviceConnectConnectedDeviceTest render connection success: connection success 1`] = `
<div
  className="device-connect-connected-device"
>
  <h3>
    Connected device
  </h3>
  <span
    className="scanned-text"
  >
    A Test Device!
  </span>
</div>
`;

exports[`DeviceConnectConnectedDeviceTest render no content: no content 1`] = `
<div
  className="device-connect-connected-device"
>
  <h3>
    Connected device
  </h3>
</div>
`;

exports[`DeviceConnectConnectedDeviceTest render scanning spinner: scanning spinner 1`] = `
<div
  className="device-connect-connected-device"
>
  <h3>
    Connected device
  </h3>
  <StyledSpinnerBase
    className="device-connect-spinner"
    label="Connecting to mobile device"
    labelPosition="right"
    size={0}
  />
</div>
`;
